crates/toml/tests/snapshots/invalid/array/no-close-table-04.stderr
TOML parse error at line 1, column 26
  |
1 | no-close-table-04 = [1,{2]
  |                          ^
invalid inline table element, expected `=`

---
TOML parse error at line 1, column 27
  |
1 | no-close-table-04 = [1,{2]
  |                           ^
unclosed inline table, expected `}`

---
TOML parse error at line 1, column 27
  |
1 | no-close-table-04 = [1,{2]
  |                           ^
unclosed array, expected `]`

---
TOML parse error at line 1, column 27
  |
1 | no-close-table-04 = [1,{2]
  |                           ^
invalid literal string, expected `'`

---
TOML parse error at line 1, column 27
  |
1 | no-close-table-04 = [1,{2]
  |                           ^
invalid literal string, expected `'`
